# selfos

./: .gitignore  1.md  CHANGELOG.md  LICENSE  README.md  architecture.md  demo.md  phase0.md  phase1.md  phase2.md  phase3.md  pyproject.toml  requirements-dev.txt  roadmap.md  selfos.yaml  strategy.md  use-cases.md
docs/: TESTING.md  activity-schema.md  architecture-contract.md  architecture-overview.md  compliance-report.md  current-state.md  final-compliance-report.md  phase4.md  plugin-development.md  plugin-marketplace.yaml  plugins.md  roadmap.md  user-guide.md
selfos-data/: README.md  TESTING_PHASE2.md  pyproject.toml  selfos.yaml
selfos-data/.github/workflows/: categorize-events.yml  ci.yml  import-external.yml  import-logs.yml  update-dashboard.yml  weekly-report.yml
selfos-data/data/: trust.json
selfos-data/docs/: architecture-contract.md  architecture-overview.md  compliance-report.md  shell_concept.md
selfos-data/plugins/: auto_categorize_plugin.py  base_plugin.py  calendar_plugin.py  daily_summary_plugin.py  enable_auto_plugin.py  example_calendar_plugin.py  example_todoist_plugin.py  show_auto_status_plugin.py  todoist_plugin.py  weekly_report_plugin.py
selfos-data/scripts/: auto_categorize.py  categorize.py  create_task.py  daily_summary.py  enable_auto.py  import_github.py  photo_classifier.py  photo_trust.py  quick_note.py  show_auto_status.py  smart_suggestions.py  tag_suggestion.py  trust_manager.py  update_dashboard.py  update_dashboard_v2.py  weekly_report.py
selfos-data/src/selfos/: base_selfos_plugin.py  cli.py  email.py  plugin_registry.py  scheduler.py  web_interface.py
selfos-data/src/selfos/email/: service.py  smtp_provider.py
selfos-data/tests/: test_base_plugin.py  test_browser.py  test_categorize.py  test_context_engine.py  test_daily_summary.py  test_email.py  test_email_service.py  test_enable_auto.py  test_photo_classifier.py  test_photo_trust.py  test_quick_note.py  test_quick_note_plugin.py  test_scheduler.py  test_smart_suggestions.py  test_todoist_plugin.py  test_trust_manager.py
(+139 files in other folders)
