[project]
name = "selfos"
version = "0.3.0"
description = "Personal Operating System - Delegation Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
selfos = "selfos.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["selfos*", "plugins*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/selfos/plugin_registry.py" = ["E402"]
"src/selfos/email/delegation.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
no_implicit_optional = false
exclude = [
  'plugins/',
  'scripts/',
  'tests/',
  'build/',
  'dist/',
]

[[tool.mypy.overrides]]
module = [
  "yaml",
  "plugins.*",
]
ignore_missing_imports = true
